--- a/sass/modules/_form.scss
+++ b/sass/modules/_form.scss
@@ -156,17 +156,17 @@
 
     .form--small{
         grid-row: 5 / span 6;
-        grid-column: 5 / span 3;
+        grid-column: 5 / span 4;
     }
 
     .form--medium{
         grid-row: 5 / span 7;
-        grid-column: 5 / span 3;
+        grid-column: 5 / span 4;
     }
 
     .form--large{
         grid-row: 5 / span 7;
-        grid-column: 5 / span 3;
+        grid-column: 5 / span 4;
     }
 
     .trans_detail_title{
@@ -174,7 +174,7 @@
         margin-left: auto;
         margin-right: auto;
         grid-row: 3 / span 1;
-        grid-column: 5 / span 3;
+        grid-column: 5 / span 4;
         font-size: 42px;
     }
 } 
